[gd_scene load_steps=10 format=3 uid="uid://i2b7tkcs0d8k"]

[ext_resource type="Script" uid="uid://did5mydf3lhf2" path="res://scenes/main_menu.gd" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://3xx2n75vrhjm" path="res://assets/fonts/font.ttf" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://cu5hvqwbf2yw7" path="res://scenes/button.tscn" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://busub7271ihti" path="res://assets/icon.png" id="4_wu84c"]

[sub_resource type="LabelSettings" id="LabelSettings_tbgi4"]
font = ExtResource("1_l6cm7")
font_size = 41
font_color = Color(0.890196, 0.890196, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 2.5)

[sub_resource type="LabelSettings" id="LabelSettings_bqqt6"]
font = ExtResource("1_l6cm7")
font_size = 23
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_bqqt6"]
resource_name = "Blink"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.890196, 0.890196, 0, 1), Color(1, 0, 0, 1), Color(0, 1, 0, 1), Color(0.513726, 0.317647, 0.980392, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.56667, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wu84c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.890196, 0.890196, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ln24"]
_data = {
&"Blink": SubResource("Animation_bqqt6"),
&"RESET": SubResource("Animation_wu84c")
}

[node name="MainMenu" type="Node"]
script = ExtResource("1_ekxnf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 736.0

[node name="Title" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 244.0
offset_right = 376.0
offset_bottom = 321.0
pivot_offset = Vector2(184, 63.9622)
text = "KnockOut!"
label_settings = SubResource("LabelSettings_tbgi4")
horizontal_alignment = 1

[node name="subtitle" type="Label" parent="Control/Panel/Title"]
layout_mode = 0
offset_left = -8.0
offset_top = 64.0
offset_right = 376.0
offset_bottom = 107.0
text = "Dice game"
label_settings = SubResource("LabelSettings_bqqt6")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Panel/Title"]
libraries = {
&"": SubResource("AnimationLibrary_8ln24")
}
autoplay = "Blink"

[node name="Button - New Run" parent="Control/Panel" instance=ExtResource("3_bqqt6")]
layout_mode = 0
offset_left = 128.0
offset_top = 456.0
offset_right = 256.0
offset_bottom = 496.0
text = "New Run"

[node name="Button - Credits" parent="Control/Panel" instance=ExtResource("3_bqqt6")]
layout_mode = 0
offset_left = 128.0
offset_top = 520.0
offset_right = 256.0
offset_bottom = 560.0
text = "Credits"

[node name="Sprite2D" type="Sprite2D" parent="Control/Panel"]
z_index = -1
position = Vector2(192, 252)
scale = Vector2(0.555556, 0.544445)
texture = ExtResource("4_wu84c")

[connection signal="pressed" from="Control/Panel/Button - New Run" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Panel/Button - Credits" to="." method="_on_button__credits_pressed"]
